[metadata]
name = easyvoice
version = 0.1
author = Daniil Maksymenko
author_email = maksymenkodaniil@gmail.com
description = A package to integrate EasyVoice models and solutions to your services natively
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
install_requires = requests
packages = find:
python_requires = >=3.7
include_package_data = True